using List.of instead Array.asList for parseOutputFormat() inside CommandLineOptionsParserTest